# lavalite

./: .clang-format  .gitignore  CONTRIBUTING.md  LICENSE  Make.common  Makefile.am  NOTICE  README-style.md  README.md  RELEASE-lavalite-0.1.1.md  RELEASE-lavalite-0.9.0.md  bootstrap  configure.ac  kickstart
conf/: README.md  lava-rsync.sh  lsf.cluster.openlava
docs/: Makefile.am  README-JobArrays.md  README-RES_REQ.md  README.md  RELEASE-lavalite-0.9.0.md  RELEASE-lavalite-1.0.0.md  array_parser.c  array_parser_test.c  mvp_checklist.md
docs/man/: Makefile.am
docs/man/man5/: list.sh  lsf.conf.5
docs/man/man7/: lavalite.7
docs/man/man8/: esub.8  lim.8
docs/man/markdown/: badmin.8.md  bbot.1.md  bchkpnt.1.md  bgroup.1.md  bgroups.1.md  bhist.1.md  bhosts.1.md  bjobs.1.md  bkill.1.md  bmgroup.1.md  bmig.1.md  bmod.1.md  bmove.1.md  bparams.1.md  bpeek.1.md  bpriority.1.md  bqueues.1.md  brequeue.1.md  brestart.1.md  bresume.1.md  brun.8.md  bstop.1.md  bsub.1.md  bswitch.1.md  btokens.1.md  btop.1.md  bugroup.1.md  busers.1.md  convert.sh  eauth.8.md  esub.8.md  lavalite-mbd.service  lavalite-sbd.service  lavalite.7.md  lim.8.md  ll.conf.5.md  llb.hosts.5.md  llb.queues.5.md  lsacct.1.md  lsadmin.8.md  (+28 more)
docs/projects/: INSTALL-lavacore-0.1.0.md  Makefile.am  epoll-design.md  lava_compute_engine_test_mvp0.md  lava_lite_coding_guide.md  lavacore_engine_test_mvp0.md  lavacore_lim_protocol.md  lavacore_sbd.md  lavalite-admin.tex  lavalite-gpu-topology.md  lavalite.tex  lavalite_admin.md  lavalite_bsub_test.md  lavalite_coding_guide.md  lavalite_control_data_plane.md  lavalite_dev_tags.md  lavalite_disaggregated_computing.md  lavalite_events_pipeline.md  lavalite_job_signalling.md  lavalite_jobfile_format.md  lavalite_lim_protocol.md  lavalite_release-0.1.checklist.md  lavalite_sbd.md  lavalite_scheduler.md  lavalivecontroldata.md  ll_mbd_control.md
etc/: README.md  batch.hosts  batch.queues  lavacore-lim.service  lavacore-mbd.service  lavacore-sbd.service  lavacore.env  lavalite-lim.service  lavalite-mbd.service  lavalite-sbd.service  lavalite.lua  ll.auth.key  ll.cluster.lavalite  ll.conf  llb.hosts  llb.queues  lsb.hosts  lsb.params  lsb.queues  lsb.users  lsf.cluster.lavacore  (+4 more)
src/base/cmd/: Makefile.am  load.c  lsclusterinfo.c  lsclusters.c  lshosts.c  lsid.c  lsload.c  lsplace.c
src/batch/cmd/: Makefile.am  bgroup.c  bgroups.c  bhist  bhist.c  bhosts.c  bjobs.c  bkill.c  bmetric.c  bmgroup.c  bmig.c  bmove.c  bparams.c  bpeek.c  bpriority.c  bqueues.c  brequeue.c  brun.c  bsub.c  btokens.c  busers.c  cmd.bhc.c  cmd.bqc.c  cmd.hist.c  cmd.job.c  cmd.jobid.c  cmd.misc.c  cmd.move.c  cmd.prt.c  cmd.sig.c  cmd.sub.c  sbjobs.c
src/batch/mbd/: Makefile.am  admin.c  api.c  compact.c  conf.c  dispatch.c  events.c  init.c  job.c  main.c  mbd.c  net.c  sbd.c  sched.c
src/eauth/: Makefile.am  eauth-legacy.c  eauth.h  eauth.lib.c  eauth_client.c  eauth_server.c  run-eauth.c
src/lsbatch/cmd/: Makefile.am  bacct  badmin.c  badmin.h  bbot.c  bhist  bhosts.c  bjobs.c  bkill.c  bmgroup.c  bmig.c  bmod.c  bparams.c  bpeek.c  bqueues.c  brequeue.c  brestart.c  brun.c  bsub.c  bswitch.c  btop.c  busers.c  cmd.bhc.c  cmd.bqc.c  cmd.err.c  cmd.h  cmd.hist.c  cmd.job.c  cmd.jobid.c  cmd.misc.c  cmd.move.c  cmd.prt.c  cmd.sig.c  cmd.sub.c  sbjobs.c
src/lsbatch/daemons/: Makefile.am  daemonout.h  daemons.c  daemons.h  daemons.xdr.c  elock.c  jgrp.h  mail.c  mbatchd.handler.c  mbatchd.job.c  mbd.comm.c  mbd.compact.c  mbd.dep.c  mbd.grp.c  mbd.h  mbd.host.c  mbd.init.c  mbd.jarray.c  mbd.jgrp.c  mbd.job.c  mbd.log.c  mbd.main.c  mbd.misc.c  mbd.policy.c  mbd.proxy.c  mbd.queue.c  mbd.requeue.c  mbd.resource.c  mbd.sbd.c  mbd.serv.c  mbd.window.c  misc.c  sbatchd.client.c  sbatchd.handler.c  sbatchd.job.c  sbatchd.jobdata.c  sbatchd.log.c  sbatchd.main.c  sbatchd.mbd.c  sbatchd.net.c  (+10 more)
src/lsbatch/lib/: Makefile.am  lsb.comm.c  lsb.conf.c  lsb.debug.c  lsb.err.c  lsb.groups.c  lsb.h  lsb.hc.c  lsb.hosts.c  lsb.init.c  lsb.jobs.c  lsb.log.c  lsb.log.h  lsb.mig.c  lsb.misc.c  lsb.modify.c  lsb.move.c  lsb.msg.c  lsb.params.c  lsb.peek.c  lsb.qc.c  lsb.queues.c  lsb.reason.c  lsb.reconfig.c  lsb.resource.c  lsb.rexecv.c  lsb.sbd.c  lsb.sig.c  lsb.sig.h  lsb.signals.c  lsb.spool.c  lsb.sub.c  lsb.switch.c  lsb.users.c  lsb.xdr.c  lsb.xdr.h
src/lsbatch/man/: Makefile.am
src/lsbatch/man/man1/: bsub.1
src/lsf/intlib/: Makefile.am  admin.c  bitset.c  cal.c  cal.l  callex.c  cmdtime.c  codeviz.dot  conf.c  daemon.c  idx.c  idx.y  intlib_internal.h  jidx.c  lex.yy.c  list.c  listerr.def  listset.c  lsftcl.c  misc.c  resourcecmd.c  resreq.c  set.c  tcl_stub.c  testbitset.c  timers.c  userok.c  vector.c  wait.c  window.c
src/lsf/lib/: #lib.hosta.c#  Log  Makefile.am  admin.c  bitset.c  cmdtime.c  codeviz.dot  daemon.c  fix_includes_here.sh  inclde1.sh  include.sh  lib.channel.c  lib.conf.c  lib.confmisc.c  lib.conn.c  lib.control.c  lib.cwd.c  lib.debug.c  lib.dir.c  lib.eauth.c  lib.eligible.c  lib.err.c  lib.errno.c  lib.esub.c  lib.host.c  lib.hosta.c  lib.i18n.c  lib.id.c  lib.info.c  lib.init.c  lib.initenv.c  lib.lim.c  lib.limits.c  lib.load.c  lib.lsf.c  lib.misc.c  lib.nioback.c  lib.nios.c  lib.pim.c  lib.place.c  (+51 more)
src/lsf/lim/: Makefile.am  lim  lim.cluster.c  lim.common.h  lim.conf.c  lim.control.c  lim.info.c  lim.internal.c  lim.linux.c  lim.load.c  lim.main.c  lim.misc.c  lim.policy.c  lim.rload.c  lim.tcp.c  lim.udp.c  lim.xdr.c  limout.h
src/lsf/lstools/: Makefile.am  load.c  lsacct.c  lsclusters.c  lseligible.c  lshosts.c  lsid.c  lsinfo.c  lsload.c  lsloadadj.c  lsmon.c  lsplace.c  lsrcp.c  lstools.h
src/lsf/man/: Makefile.am
src/lsf/pim/: Makefile.am  get_process_tree.sh  mypim.c  pim.linux.c  pim.main.c
src/lsf/res/: Makefile.am  nios.c  nios.h  nios.handler.c  res.c  res.getproc.c  res.h  res.handler.c  res.init.c  res.misc.c  res.pty.c  res.rf.c  res.tasklog.c  rescom.h  resout.h  resvcl.c  utmpreg.c
src/tests/cli/: Makefile.am  README.md  conftest.py  test_bsub_interactive.py  test_bsub_submit_bjobs.py  test_lshosts_bhosts.py  test_lsid.py  test_lsload.py
(+563 files in other folders)
