#
# Copyright (C) LavaLite Contributors
#
# lstools/Makefile.am

include $(top_srcdir)/Make.common
COMMON_LIBS = ../lib/libllbase.a

LDADD = $(COMMON_LIBS)

bin_PROGRAMS = lshosts lsid lsload lsclusterinfo

# Command source and linker
lshosts_SOURCES    = lshosts.c
lsid_SOURCES       = lsid.c
lsload_SOURCES     = lsload.c
lsclusterinfo_SOURCES = lsclusterinfo.c

