#
# Copyright (C) LavaLite Contributors
#
man1_MANS = \
	man1/bbot.1 \
	man1/bchkpnt.1 \
	man1/bhosts.1 \
	man1/bjobs.1 \
	man1/bkill.1 \
	man1/bmgroup.1 \
	man1/bmig.1 \
	man1/bmod.1 \
	man1/bparams.1 \
	man1/bpeek.1 \
	man1/bqueues.1 \
	man1/brequeue.1 \
	man1/brestart.1 \
	man1/bresume.1 \
	man1/bstop.1 \
	man1/bsub.1 \
	man1/bswitch.1 \
	man1/btop.1 \
	man1/bugroup.1 \
	man1/busers.1 \
	man1/lsfbatch.1

man5_MANS = \
	man5/96 \
	man5/lsb.acct.5 \
	man5/lsb.events.5 \
	man5/lsb.hosts.5 \
	man5/lsb.params.5 \
	man5/lsb.queues.5 \
	man5/lsb.users.5

man8_MANS = \
	man8/40 \
	man8/badmin.8 \
	man8/brun.8 \
	man8/mbatchd.8 \
	man8/sbatchd.8

