#
#  Copyright (C) LavaLite Contributors
#
man1_MANS = \
 	man1/lsacct.1 \
	man1/lseligible.1 \
	man1/lsfbase.1 \
	man1/lsfintro.1 \
	man1/lshosts.1 \
	man1/lsid.1 \
	man1/lsinfo.1 \
	man1/lsload.1 \
	man1/lsloadadj.1 \
	man1/lsmon.1 \
	man1/lsplace.1 \
	man1/lsrcp.1 \
	man1/lstools.1

man5_MANS = \
	man5/lim.acct.5 \
	man5/lsf.acct.5 \
	man5/lsf.cluster.5 \
	man5/lsf.conf.5 \
	man5/lsf.shared.5 \
	man5/res.acct.5

man8_MAN = \
	man8/eauth.8 \
	man8/eexec.8 \
	man8/esub.8 \
	man8/lim.8 \
	man8/lsadmin.8 \
	man8/nios.8 \
	man8/pim.8 \
	man8/res.8
